Adding camera class and mouse orbit and tilt
Adding camera class and mouse orbit and tilt

--- a/QtOpenGLTests/OpenGLTester/OpenGLTester/OpenGLTester.vcxproj.filters
+++ b/QtOpenGLTests/OpenGLTester/OpenGLTester/OpenGLTester.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="GridObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="opengltester.h">
@@ -74,6 +77,9 @@
       <Filter>Resource Files</Filter>
     </CustomBuild>
     <CustomBuild Include="ViewportWidget.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="Camera.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
