Moved camera members to Camera class
Moved camera members to Camera class

Prepping for more advanced camera controls

--- a/QtOpenGLTests/OpenGLTester/OpenGLTester/OpenGLTester.vcxproj
+++ b/QtOpenGLTests/OpenGLTester/OpenGLTester/OpenGLTester.vcxproj
@@ -178,6 +178,7 @@
     </ClCompile>
     <ClCompile Include="GridObject.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ObjectUtils.cpp" />
     <ClCompile Include="opengltester.cpp" />
     <ClCompile Include="ViewportWidget.cpp" />
   </ItemGroup>
@@ -242,6 +243,7 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ObjectUtils.h" />
     <CustomBuild Include="Camera.h">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
       </Message>
