--- a/QtOpenGLTests/OpenGLTester/OpenGLTester/OpenGLTester.vcxproj.filters
+++ b/QtOpenGLTests/OpenGLTester/OpenGLTester/OpenGLTester.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ObjectUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="opengltester.h">
@@ -88,6 +91,9 @@
       <Filter>Generated Files</Filter>
     </ClInclude>
     <ClInclude Include="GridObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
